Refactor KcCommand class